--- a/styles/all.css
+++ b/styles/all.css
@@ -1,40 +1,49 @@
-*{
+* {
     box-sizing: border-box;
- 
 }
-main{
-    display: flex;    flex-direction: column;
-    margin-left: 25%;
-    margin-right: 25%;
-   padding-top: 45px;
-   background-color: wheat;
-   align-items: center;
-}
+html{
+    background-color: wheat;
+    background-image: url("../medias/700002-medieval-battle-wallpaper-2000x1125-for-samsung-galaxy.jpg") ;
+    background-size: cover;
+background-repeat: no-repeat;
+    
+    }
 header {
-margin-top: -10%x;
-display: flex;
-background-color: grey;
-flex-wrap: wrap;
-width: 100%;
-position: fixed;
-top:0px;
+    margin-top: -1%;
+    display: absolute;
+    background-color: grey;
+    flex-wrap: wrap;
+    width: 100%;
+    position: fixed;
+z-index: 999;
 }
 
-header div.container{
+header div.container {
     display: flex;
     width: 100%;
     flex-direction: column;
-   margin-left: 25%;
-   
+
+
+
 }
-nav{
+.container,
+.display p {
+    position: absolute;
+    padding: 10px;
+    background-color: rgba(50, 50, 50, 0.5);
+    color: white;
+    font-size: 1em;
+    overflow: hidden;
+    text-decoration: none;
+}
+header nav {
     display: flex;
-    width: 68%;
-    margin-right: 25%;
+    width: 100%;
+padding-top: 20px;
     justify-content: space-around;
-   margin-bottom: 20px;
-   margin-top: 20px;
-   color: black;
+    margin-bottom: 20px;
+    margin-top: 15px;
+    color: black;
 }
 
 nav a {
@@ -43,6 +52,54 @@ nav a {
     padding: 10px;
     text-decoration: none;
     color: black;
+
+}
+
+main {
+    display: flex;
+    margin-top: 1px;
+  
+    background-color: whitesmoke;
+    justify-content: space-between;
     
 }
 
+footer div.container {
+    display: flex;
+    width: 100%;
+    justify-content: space-around;
+    background-color: rgba(50, 50, 50, 0.5);
+    opacity: 1;
+
+}
+
+footer {
+    display: flex;
+
+}
+
+div.container {
+    display: flex;
+    width: 100%;
+}
+
+p {
+    font-size: 1.1em;
+    
+}
+nav a:hover{
+    transform: scale(1.3);
+    z-index: 1;
+    
+    background-color: black;
+    color: wheat;
+
+}
+img.logo  {
+    width: 35px;
+    height: 35px;
+}
+a{
+    display: flex;
+    align-items: center;
+}
