--- a/styles/index.css
+++ b/styles/index.css
@@ -1,3 +1,38 @@
-p{
-    font-size: 1px;
+*{
+    z-index: 0;
 }
+main div.display {
+    display: flex;
+    width: 100%;
+    flex-direction: row;
+    justify-content: space-between;
+    
+}
+
+main {
+    flex-direction: column;
+    margin-left: 25%;
+    margin-right: 25%;
+    padding-top: 5%;
+}
+
+.ville {
+    width: 33%;
+    
+}
+
+.ville img {
+    width: 100%;
+    height: 19em;
+    object-fit: cover;
+
+}
+img:hover{
+    transform: scale(1.1);
+    z-index: 1;
+    filter: brightness(1.2);
+ }
+
+ h1,h2{
+    text-align: center;
+ }
