--- a/styles/pages.css
+++ b/styles/pages.css
@@ -1,27 +1,69 @@
 
-div.container{
-    display: flex;
-    width:100%;
+
+main {
+    
+    margin-left: 15%;
+    margin-right: 15%;
+    align-items: flex-start;
+    padding: 15px;
 }
-p{
-    font-size: 1.1em;
-}
-.ville{
-    width: 33%;
-}
-.ville img{
-    width: 103%;
-    height: 100%;
-}
-.container p{
-    position: absolute;
-   padding: 10px;
-   background-color: rgba(50,50, 50, 0.5);
-   color: white;
-   font-size: 1em;
-   overflow: hidden;   
-   text-decoration: none;
-}
-h2{
+h2 {
     align-self: flex-start;
 }
+
+main div {
+
+    display: flex;
+    width: 33%;
+    max-height:none;
+    flex-direction: column;
+    align-items: flex-start;
+   
+}
+
+.imgT img ,table{
+    width: 100%;
+    height: 12em;
+}
+
+table{
+    
+    background-color: grey;
+}
+table,h3,h1{
+    
+    text-align: center;
+  
+    border-style:solid; 
+    border-color:black;
+    border-collapse: collapse;
+}
+
+table h3,h1,.imgT h2{
+    background-color: black;
+    color: white;
+}
+td{
+    width: 50%;
+    text-align: left;
+    
+}
+
+.imgT {
+    border-style:solid; 
+    border-width:1px; 
+    background-color: grey;
+}
+#presentation{
+    display: block;
+    margin: auto;
+    height: auto;
+    padding-top: 8%;
+
+}
+img:not(.imgT img,table img):hover{
+    transform: scale(1.1);
+    z-index: 1;
+    filter: brightness(1.2);
+ }
+ 
