--- a/styles/all.css
+++ b/styles/all.css
@@ -1,105 +1,205 @@
+@media screen and (min-width: 1001px) {
+    header nav {
+        display: flex;
+        width: 100%;
+        padding-top: 20px;
+        justify-content: space-around;
+        margin-bottom: 20px;
+        margin-top: 15px;
+        color: black;
+    }
+    nav a {
+        background-color: wheat;
+        border-radius: 10px;
+        padding: 10px;
+        text-decoration: none;
+        color: black;
+
+    }
+    main {
+        display: flex;
+        margin-top: 1px;
+        border-radius: 10px;
+        background-color: wheat;
+        justify-content: space-between;
+
+
+    }
+
+
+    div.container {
+        display: flex;
+        width: 100%;
+    }
+
+    p {
+        font-size: 1.1em;
+    }
+
+    nav a:hover {
+        transform: scale(1.3);
+        z-index: 1;
+        background-color: black;
+        color: wheat;
+    }
+
+    img.logo {
+        width: 35px;
+        height: 35px;
+    }
+
+    a {
+        display: flex;
+        align-items: center;
+        text-decoration: none;
+        color: black;
+    }
+}
+@media screen and (max-width: 1000px)and (min-width: 601px) {
+    header nav {
+        display: flex;
+        width: 100%;
+        margin-top: 10px;
+        justify-content: space-around;
+        flex-direction: column;
+        align-items: stretch;
+       
+        color: black;
+    }
+
+    nav a {
+        background-color: rgba(0, 0, 0,0.5);
+        
+        text-decoration: none;
+        color: wheat;
+        font-size: 0.5em;
+        justify-content: center;
+    }
+ 
+    div.container {
+        display: flex;
+        width: 100%;
+    }
+    p {
+        font-size: 1.1em;
+    }
+   
+    img.logo {
+        width: 15px;
+        height: 15px;
+    }
+    a {
+        display: flex;
+        align-items: center;
+        text-decoration: none;
+        color: black;
+        
+    }
+}
+@media screen and (max-width: 600px) {
+    header nav {
+        display: flex;
+        width: 100%;
+        justify-content: space-around;
+       
+        background-color: black;
+        
+    }
+    nav a {
+        background-color: black;
+        padding: 10px;
+        text-decoration: none;
+        color: wheat;    
+
+    }
+
+    main {
+        display: flex;
+        margin-top: 1px;
+        border-radius: 10px;
+        justify-content: space-between;
+    }
+    div.container {
+        display: flex;
+        width: 100%;
+    }
+
+    p {
+        font-size: 1.1em;
+    }
+
+
+
+    img.logo {
+        width: 15px;
+        height: 15px;
+    }
+
+  
+}
+
+
+
 * {
     box-sizing: border-box;
 }
-html{
-    background-color: wheat;
-    background-image: url("../medias/700002-medieval-battle-wallpaper-2000x1125-for-samsung-galaxy.jpg") ;
-    background-size: cover;
-background-repeat: no-repeat;
-    
-    }
-header {
-    margin-top: -1%;
-    display: absolute;
-    background-color: grey;
-    flex-wrap: wrap;
-    width: 100%;
-    position: fixed;
-z-index: 999;
-}
-
 header div.container {
     display: flex;
     width: 100%;
     flex-direction: column;
-
-
+    
 
 }
 .container,
 .display p {
     position: absolute;
-    padding: 10px;
     background-color: rgba(50, 50, 50, 0.5);
     color: white;
     font-size: 1em;
     overflow: hidden;
     text-decoration: none;
 }
-header nav {
-    display: flex;
-    width: 100%;
-padding-top: 20px;
-    justify-content: space-around;
-    margin-bottom: 20px;
-    margin-top: 15px;
-    color: black;
-}
 
-nav a {
+header {                    
+    margin-top: -1%;                  /*-------------- a changer pour le tablette*/
+    left: 0;
+    display: absolute;
+    background-color: grey;
+    flex-wrap: wrap;
+    width: 100%;
+    position: fixed;
+    z-index: 999;
+}
+html {
     background-color: wheat;
-    border-radius: 10px;
-    padding: 10px;
+    background-image: url("../medias/700002-medieval-battle-wallpaper-2000x1125-for-samsung-galaxy.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+
+}
+footer div.container h5{
+    color: wheat;
+}
+
+a {
+    display: flex;
+    align-items: center;
     text-decoration: none;
-    color: black;
-
+    color: wheat;
 }
-
-main {
-    display: flex;
-    margin-top: 1px;
-  
-    background-color: whitesmoke;
-    justify-content: space-between;
-    
-}
-
-footer div.container {
-    display: flex;
-    width: 100%;
-    justify-content: space-around;
-    background-color: rgba(50, 50, 50, 0.5);
-    opacity: 1;
-
-}
-
 footer {
     display: flex;
 
 }
-
-div.container {
+footer div.container {
     display: flex;
+    left: 0;
     width: 100%;
-}
-
-p {
-    font-size: 1.1em;
-    
-}
-nav a:hover{
-    transform: scale(1.3);
-    z-index: 1;
-    
-    background-color: black;
     color: wheat;
+    justify-content: space-around;
+    background-color: rgba(50, 50, 50, 0.5);
+    opacity: 1;
 
-}
-img.logo  {
-    width: 35px;
-    height: 35px;
-}
-a{
-    display: flex;
-    align-items: center;
+
+
 }
