--- a/styles/index.css
+++ b/styles/index.css
@@ -1,6 +1,7 @@
 *{
     z-index: 0;
 }
+
 main div.display {
     display: flex;
     width: 100%;
@@ -9,22 +10,23 @@ main div.display {
     
 }
 
-main {
-    flex-direction: column;
-    margin-left: 25%;
-    margin-right: 25%;
-    padding-top: 5%;
+.ville p{
+    position:absolute;
+    top: 0;
+    left: 0;
+    z-index: 999;
+    
 }
 
 .ville {
     width: 33%;
-    
+    position: relative;
 }
 
 .ville img {
     width: 100%;
-    height: 19em;
-    object-fit: cover;
+    height: 10em;
+  
 
 }
 img:hover{
@@ -35,4 +37,32 @@ img:hover{
 
  h1,h2{
     text-align: center;
+ }
+ main {
+    flex-direction: column;
+    margin-left: 25%;
+    margin-right: 25%;
+    padding-top: 12%;
+    margin-top: -10px;
+    background-color: wheat;
+}
+h2,h1{
+    color: wheat;
+    background-color: black;
+}
+ @media screen and (min-width: 1001px){
+ 
+}
+ @media screen and (max-width: 1000px)and (min-width: 601px)
+ {
+   
+ }
+ @media screen and (max-width: 600px){
+    main {
+        flex-direction: column;
+        margin-left: 0;
+        margin-right: 0;
+        padding-top: 5%;
+        background-color: wheat;
+    }
  }
