--- a/styles/pages.css
+++ b/styles/pages.css
@@ -1,5 +1,4 @@
-
-
+@media screen and (min-width: 1001px) {
 main {
     
     margin-left: 15%;
@@ -10,7 +9,6 @@ main {
 h2 {
     align-self: flex-start;
 }
-
 main div {
 
     display: flex;
@@ -20,12 +18,10 @@ main div {
     align-items: flex-start;
    
 }
-
 .imgT img ,table{
     width: 100%;
-    height: 12em;
+    height: 175px;
 }
-
 table{
     
     background-color: grey;
@@ -38,17 +34,15 @@ table,h3,h1{
     border-color:black;
     border-collapse: collapse;
 }
-
 table h3,h1,.imgT h2{
     background-color: black;
-    color: white;
+    color: wheat;
 }
 td{
     width: 50%;
     text-align: left;
     
 }
-
 .imgT {
     border-style:solid; 
     border-width:1px; 
@@ -57,8 +51,9 @@ td{
 #presentation{
     display: block;
     margin: auto;
-    height: auto;
-    padding-top: 8%;
+    width: 30em;
+    height: 30em;
+    padding-top: 12%;
 
 }
 img:not(.imgT img,table img):hover{
@@ -66,4 +61,159 @@ img:not(.imgT img,table img):hover{
     z-index: 1;
     filter: brightness(1.2);
  }
- 
+ h2{
+    padding: 10px;
+    border-radius: 12px;
+    align-self: center;
+ }
+ table img{
+    width: 15px;
+ }
+ .imgT,table{
+    height:90em;
+ }
+}
+@media screen and (max-width: 1000px) and (min-width: 601px) {
+
+    main {
+        display: flex;
+      flex-wrap: wrap;
+        align-items: flex-start;
+        justify-content: space-around;
+        padding: 15px;
+    }
+    h2 {
+        align-self: flex-start;
+    }
+    main div {
+    
+        display: flex;
+        width: 50%;
+        max-height:none;
+        flex-direction: column;
+        align-items: flex-start;
+       
+    }
+    .imgT img {
+        width: 100%;
+        height: 15em;
+    }
+    table{
+        
+        background-color: grey;
+    }
+    table,h3,h1{
+        
+        text-align: center;
+      
+        border-style:solid; 
+        border-color:black;
+        border-collapse: collapse;
+    }
+    table h3,h1,.imgT h2{
+        background-color: black;
+        color: wheat;
+    }
+    td{
+        width: 50%;
+        text-align: left;
+    
+        
+    }
+    .imgT {
+        border-style:solid; 
+        border-width:1px; 
+        background-color: grey;
+        height: 90em;
+    }
+    #presentation{
+        display: block;
+        margin: auto;
+        width: 20em;
+        height: 20em;
+        padding-top: 14%;
+    
+    }
+    img:not(.imgT img,table img):hover{
+        transform: scale(1.1);
+        z-index: 1;
+        filter: brightness(1.2);
+     }
+     h2{
+        padding: 10px;
+        border-radius: 12px;
+        align-self: center;
+     }
+
+     table img{
+        width: 15px;
+     }  
+    }  
+@media screen and (max-width: 600px) {
+    
+    main{
+        flex-direction: row;
+        flex-wrap: wrap;
+    }
+    h2 {
+        align-self: flex-start;
+    }
+    main div {
+    
+        display: flex;
+        width:100%;
+        max-height:none;
+        flex-direction: column;
+        align-items: flex-start;
+       
+    }
+    .imgT img ,table{
+        width: 100%;
+        height: 15em;
+    }
+    table{
+        
+        background-color: grey;
+    }
+    table,h3,h1{
+        
+        text-align: center;
+      
+        border-style:solid; 
+        border-color:black;
+        border-collapse: collapse;
+    }
+    table h3,h1,.imgT h2{
+        background-color: black;
+        color: wheat;
+    }
+    td{
+        width: 50%;
+        text-align: left;
+        
+    }
+    .imgT {
+        border-style:solid; 
+        border-width:1px; 
+        background-color: grey;
+    }
+    #presentation{
+        display: block;
+        margin: auto;
+        width: 15em;
+        height: 15em;
+        padding-top: 8%;
+    
+    }
+  
+     h2{
+        padding: 10px;
+        border-radius: 12px;
+      
+        width: 100%;
+        text-align: center;
+     }
+     table img{
+        width: 15px;
+     }
+    }
