--- a/styles/all.css
+++ b/styles/all.css
@@ -8,35 +8,25 @@
         margin-top: 15px;
         color: black;
     }
+
     nav a {
         background-color: wheat;
         border-radius: 10px;
         padding: 10px;
         text-decoration: none;
         color: black;
-
     }
+
     main {
         display: flex;
         margin-top: 1px;
         border-radius: 10px;
         background-color: wheat;
         justify-content: space-between;
-
-
     }
 
 
-    div.container {
-        display: flex;
-        width: 100%;
-    }
-
-    p {
-        font-size: 1.1em;
-    }
-
-    nav a:hover {
+    nav a:hover {  
         transform: scale(1.3);
         z-index: 1;
         background-color: black;
@@ -55,6 +45,7 @@
         color: black;
     }
 }
+
 @media screen and (max-width: 1000px)and (min-width: 601px) {
     header nav {
         display: flex;
@@ -63,54 +54,54 @@
         justify-content: space-around;
         flex-direction: column;
         align-items: stretch;
-       
+
         color: black;
     }
 
     nav a {
-        background-color: rgba(0, 0, 0,0.5);
-        
+        background-color: rgba(0, 0, 0, 0.5);
+
         text-decoration: none;
         color: wheat;
         font-size: 0.5em;
         justify-content: center;
     }
- 
-    div.container {
-        display: flex;
-        width: 100%;
-    }
-    p {
-        font-size: 1.1em;
-    }
-   
+
+
+
     img.logo {
         width: 15px;
         height: 15px;
     }
+
     a {
         display: flex;
         align-items: center;
         text-decoration: none;
         color: black;
-        
+
+    }
+    nav a:active {
+        transform: scale(1.3);
+        z-index: 1;
+        background-color: wheat;
+        color: black;
     }
 }
+
 @media screen and (max-width: 600px) {
     header nav {
         display: flex;
         width: 100%;
         justify-content: space-around;
-       
         background-color: black;
-        
     }
+
     nav a {
         background-color: black;
         padding: 10px;
         text-decoration: none;
-        color: wheat;    
-
+        color: wheat;
     }
 
     main {
@@ -119,23 +110,18 @@
         border-radius: 10px;
         justify-content: space-between;
     }
-    div.container {
-        display: flex;
-        width: 100%;
+
+    nav a:active {
+        transform: scale(1.3);
+        z-index: 1;
+        background-color: wheat;
+        color: black;
     }
-
-    p {
-        font-size: 1.1em;
-    }
-
-
 
     img.logo {
         width: 15px;
         height: 15px;
     }
-
-  
 }
 
 
@@ -143,15 +129,15 @@
 * {
     box-sizing: border-box;
 }
+
 header div.container {
     display: flex;
     width: 100%;
     flex-direction: column;
-    
-
 }
+
 .container,
-.display p {
+.display p {                 
     position: absolute;
     background-color: rgba(50, 50, 50, 0.5);
     color: white;
@@ -160,8 +146,8 @@ header div.container {
     text-decoration: none;
 }
 
-header {                    
-    margin-top: -1%;                  /*-------------- a changer pour le tablette*/
+header {
+    margin-top: -1%;
     left: 0;
     display: absolute;
     background-color: grey;
@@ -170,14 +156,15 @@ header {
     position: fixed;
     z-index: 999;
 }
+
 html {
     background-color: wheat;
     background-image: url("../medias/700002-medieval-battle-wallpaper-2000x1125-for-samsung-galaxy.jpg");
     background-size: cover;
     background-repeat: no-repeat;
-
 }
-footer div.container h5{
+
+footer div.container h5 {
     color: wheat;
 }
 
@@ -187,11 +174,12 @@ a {
     text-decoration: none;
     color: wheat;
 }
+
 footer {
     display: flex;
-
 }
-footer div.container {
+
+footer div.container {              
     display: flex;
     left: 0;
     width: 100%;
@@ -199,7 +187,13 @@ footer div.container {
     justify-content: space-around;
     background-color: rgba(50, 50, 50, 0.5);
     opacity: 1;
+}
 
+div.container {
+    display: flex;
+    width: 100%;
+}
 
-
+p {
+    font-size: 1.1em;
 }
