--- a/styles/pages.css
+++ b/styles/pages.css
@@ -1,219 +1,173 @@
 @media screen and (min-width: 1001px) {
-main {
-    
-    margin-left: 15%;
-    margin-right: 15%;
-    align-items: flex-start;
-    padding: 15px;
-}
-h2 {
-    align-self: flex-start;
-}
-main div {
+    main {
+        margin-left: 15%;
+        margin-right: 15%;
+        align-items: flex-start;
+        padding: 15px;
+    }
 
-    display: flex;
-    width: 33%;
-    max-height:none;
-    flex-direction: column;
-    align-items: flex-start;
-   
-}
-.imgT img ,table{
-    width: 100%;
-    height: 175px;
-}
-table{
-    
-    background-color: grey;
-}
-table,h3,h1{
-    
-    text-align: center;
-  
-    border-style:solid; 
-    border-color:black;
-    border-collapse: collapse;
-}
-table h3,h1,.imgT h2{
-    background-color: black;
-    color: wheat;
-}
-td{
-    width: 50%;
-    text-align: left;
-    
-}
-.imgT {
-    border-style:solid; 
-    border-width:1px; 
-    background-color: grey;
-}
-#presentation{
-    display: block;
-    margin: auto;
-    width: 30em;
-    height: 30em;
-    padding-top: 12%;
+    main div {
+        display: flex;
+        width: 33%;
+        max-height: none;
+        flex-direction: column;
+        align-items: flex-start;
+    }
 
+    .imgT img,
+    table {
+        width: 100%;
+        height: 175px;
+    }
+    .imgT {
+        border-style: solid;
+        border-width: 1px;
+        background-color: grey;
+        height: 90em;
+    }
+    #presentation {
+        display: block;
+        margin: auto;
+        width: 30em;
+        height: 30em;
+        padding-top: 12%;
+    }
+
+    img:not(.imgT img, table img):hover { 
+        transform: scale(1.1);
+        z-index: 1;
+        filter: brightness(1.2);
+    }
+
+    table img {
+        width: 15px;
+    }
+
+    .imgT,
+    table {
+        height: 90em;
+    }
 }
-img:not(.imgT img,table img):hover{
-    transform: scale(1.1);
-    z-index: 1;
-    filter: brightness(1.2);
- }
- h2{
-    padding: 10px;
-    border-radius: 12px;
-    align-self: center;
- }
- table img{
-    width: 15px;
- }
- .imgT,table{
-    height:90em;
- }
-}
+
 @media screen and (max-width: 1000px) and (min-width: 601px) {
 
     main {
         display: flex;
-      flex-wrap: wrap;
+        flex-wrap: wrap;
         align-items: flex-start;
         justify-content: space-around;
         padding: 15px;
     }
-    h2 {
-        align-self: flex-start;
-    }
+
     main div {
-    
         display: flex;
         width: 50%;
-        max-height:none;
+        max-height: none;
         flex-direction: column;
         align-items: flex-start;
-       
     }
+
     .imgT img {
         width: 100%;
         height: 15em;
     }
-    table{
-        
-        background-color: grey;
-    }
-    table,h3,h1{
-        
-        text-align: center;
-      
-        border-style:solid; 
-        border-color:black;
-        border-collapse: collapse;
-    }
-    table h3,h1,.imgT h2{
-        background-color: black;
-        color: wheat;
-    }
-    td{
-        width: 50%;
-        text-align: left;
-    
-        
-    }
     .imgT {
-        border-style:solid; 
-        border-width:1px; 
+        border-style: solid;
+        border-width: 1px;
         background-color: grey;
         height: 90em;
     }
-    #presentation{
+    #presentation {
         display: block;
         margin: auto;
         width: 20em;
         height: 20em;
         padding-top: 14%;
-    
     }
-    img:not(.imgT img,table img):hover{
-        transform: scale(1.1);
-        z-index: 1;
-        filter: brightness(1.2);
-     }
-     h2{
-        padding: 10px;
-        border-radius: 12px;
-        align-self: center;
-     }
 
-     table img{
+
+
+    table img {
         width: 15px;
-     }  
-    }  
+    }
+}
+
 @media screen and (max-width: 600px) {
-    
-    main{
+
+    main {
         flex-direction: row;
         flex-wrap: wrap;
     }
-    h2 {
-        align-self: flex-start;
-    }
+
     main div {
-    
+
         display: flex;
-        width:100%;
-        max-height:none;
+        width: 100%;
+        max-height: none;
         flex-direction: column;
         align-items: flex-start;
-       
+
     }
-    .imgT img ,table{
+
+    .imgT img,
+    table {
         width: 100%;
         height: 15em;
     }
-    table{
-        
-        background-color: grey;
-    }
-    table,h3,h1{
-        
-        text-align: center;
-      
-        border-style:solid; 
-        border-color:black;
-        border-collapse: collapse;
-    }
-    table h3,h1,.imgT h2{
-        background-color: black;
-        color: wheat;
-    }
-    td{
-        width: 50%;
-        text-align: left;
-        
-    }
-    .imgT {
-        border-style:solid; 
-        border-width:1px; 
-        background-color: grey;
-    }
-    #presentation{
+
+    #presentation {
         display: block;
         margin: auto;
         width: 15em;
         height: 15em;
         padding-top: 8%;
-    
+
     }
-  
-     h2{
-        padding: 10px;
-        border-radius: 12px;
-      
-        width: 100%;
-        text-align: center;
-     }
-     table img{
+    .imgT {
+        border-style: solid;
+        border-width: 1px;
+        background-color: grey;
+     
+    }
+    table img {
         width: 15px;
-     }
     }
+}
+
+/*******************************************************************************************/
+h2 {
+    align-self: flex-start;
+}
+
+table {
+    background-color: grey;
+}
+
+table,
+h3,
+h1 {
+    text-align: center;
+    border-style: solid;
+    border-color: black;
+    border-collapse: collapse;
+}
+
+table h3,
+h1,
+.imgT h2 {
+    background-color: black;
+    color: wheat;
+}
+
+td {
+    width: 50%;
+    text-align: left;
+
+}
+
+h2 {
+    padding: 10px;
+    align-self: center;
+    width: 100%;
+    text-align: center;
+}
